layouts-builder/index.css
.h-2 {
  height: 0.5rem;
}
.h-5 {
  height: 1rem;
}
.flex {
  display: flex;
}

.flex-col {
  flex-direction: column;
}
.w-2 {
  width: 0.5rem;
}
.rlb-flex {
  display: flex;
}
.relative {
  position: relative;
}
.rlb-section {
  position: relative;
  width: 100%;
}
.rlb-section-container {
  background-size: cover !important;
}

.rlb-section:hover .rlb-section-settings {
  visibility: visible;
  height: unset;
  padding: 5px;
}


.rbl-resizing,
.rbl-resizing * {
  cursor: col-resize;
}

.rlb-row {
  display: flex;
  width: 100%;
}
.rlb-col {
  display: flex;
  position: relative;
  width: 100%;
}
.rlb-col:hover .rlb-resize-handler {
  visibility: visible;
}
.rlb-col-inner {
  display: flex;
  flex-direction: column;
  width: 100%;
}
/* resize hanlder */

.rlb-section-content {
  padding-left: 20px;
  padding-right: 20px;
}

.rlb-droppable-item {
  height: 10px;
  transition: 0.2s ease-in;
}



.rlb-range-input {
  display: flex;
  align-items: center;
  padding-top: 10px;
  padding-bottom: 10px;
}
.rlb-range-input > span {
  padding-left: 10px;
}
.rlb-range-input-nb {
  width: max-content;
}

/* resizable container */

.rlb-resizable-container {
  position: relative;
  margin-inline: auto;
  width: 100%;
  transition-duration: 0.2s;
}

/* .rlb-resizable-container.resizable:hover {
    
} */
.rlb-resizable-container.resizable.no-padding {
  padding: 0px;
}
.rlb-resizable-container.resizable {
  padding-inline: 10px;
  border: 1px solid transparent;
}

.rlb-resize-handler {
  background: #fff0;
  opacity: 0;
  width: 20px;
  position: relative;
  flex-grow: 0;
  flex-shrink: 0;
  transition: opacity 200ms ease-out 0s;
}
.resize-hand {
  background: #7c7c7c;
  border: 1px solid #fff;
  border-radius: 10px;
  height: 90%;
  position: absolute;
  right: 8px;
  top: 5%;
  width: 8px;
  cursor: col-resize;
}
.rlb-resize-handler:hover {
  opacity: 1;
  z-index: 1000;
}

.rlb-resizable-inner {
  width: '100%';
  position: relative;
}


/* draggable container*/
.rlb-draggable-container {
  position: relative;
}
.rlb-draggable-container.draggable {
  border-width: 1px;
  border-color: transparent;
}

.rlb-draggable-container.draggable:hover .rlb-drag-icon {
  visibility: visible;
}

/* image */
.rlb-draggable-container:hover .image-resize, .rlb-draggable-container:hover .image-resize-bottom {
  opacity: 1;
}
.image-resize {
  position: absolute;
  opacity: 0;
  width: 8px;
  height: 50px;
  background: #fc0454;
  z-index: 900;
  top: calc(50% - 25px);
  border: 1px solid #ffffff;
  border-radius: 50px;
  cursor: col-resize;
}
.image-resize.imr-left {
  left: 20px;
}

.image-resize.imr-right {
  right: 21px;
}
.hand-image {
  width: 100%;
  height: 100%;
}
.image_rlb {
  position: relative;
}
.resize-img,
.resize-img * {
  cursor: col-resize;
}
.resize-row,
.resize-row * {
  cursor: row-resize;
}
/* drop item indicator */
.rbl-drop-item-indicator {
  background: #fc0454;
  height: 8px;
  border: 1px solid #fff;
  border-radius: 10px;
  visibility: hidden;
  width: 100%;
}
.rbl-drop-row-indicator {
  background: #fc0454;
  height: 8px;
  border: 1px solid #fff;
  border-radius: 10px;
  visibility: hidden;
  width: 100%;
}
/* drop in size indicator */
.rbl-side-drop-indicator {
  background: #fc0454;
  width: 8px;
  border: 1px solid #fff;
  border-radius: 10px;
  visibility: hidden;
}
.rbl-drop-row-container {
  height: 25px;
  display: flex;
  width: 100%;
  align-items: center;
}

/* PUBLIC ONLY */

.rbl-vert-spacing {
  padding-bottom: 8px;
}
.image-resize-bottom {
  background: #fc0454;
  border: 1px solid #fff;
  border-radius: 50px;
  cursor: row-resize;
  height: 8px;
  opacity: 0;
  position: absolute;
  bottom: 20px;
  width: 50px;
  z-index: 900;
  left: calc(50% - 25px);
}

